--- a/AnaJaved-L04-AutoHypothesis.ipynb
+++ b/AnaJaved-L04-AutoHypothesis.ipynb
@@ -39,11 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import libraries\n",
+    "# Import libraries & packages required \n",
     "import pandas as pd\n",
     "import numpy as np \n",
     "from scipy import stats\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "Text(0.5, 0, 'Value')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -207,6 +207,7 @@
    "source": [
     "#### Creating a Q-Q Plot for a Normal Distribution\n",
     "\n",
+    "## Function to Create Q-Q Plot \n",
     "def qq_plot(vec1, vec2):\n",
     "    import matplotlib.pyplot as plt\n",
     "    import scipy.stats as ss\n",
@@ -221,22 +222,20 @@
     "    ss.probplot(vec2, plot = ax1, dist = 'norm') ## Plot the right subplot\n",
     "    ax1.set_title(\"Probplot for LogPrice Column\")\n",
     "    \n",
-    "    \n",
+    "# Passing Price and LogPrice Columns to the Q-Q Plot Function\n",
     "qq_plot(Auto.loc[:, 'price'], Auto.loc[:, 'LogPrice'])    \n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Calculating the KS Statistics to exactly Measure the Maximum Distance "
+    "With these q-q plots, we visually see a greater distance at the top and bottom for Price column. The LogPrice column also has this curvature, but it is not as large. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -255,11 +254,13 @@
     }
    ],
    "source": [
-    "def ks_test(dat, dist = 'norm'):\n",
+    "### Calculating the KS Statistics to exactly Measure the Maximum Distance \n",
+    "\n",
+    "def ks_test(dat, dist = 'norm'):  # KS Test Function \n",
     "    from scipy.stats import kstest \n",
     "    from sklearn.preprocessing import scale\n",
     "    \n",
-    "    ks_statisic, pvalue = kstest(scale(dat), dist)\n",
+    "    ks_statisic, pvalue = kstest(scale(dat), dist)  # Scaling/Normalizing Variable \n",
     "    print('KS-statistic = ' + str(ks_statisic))\n",
     "    print('P-value = ' + str(pvalue))\n",
     "  \n",
@@ -297,28 +298,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Welche's test for paired data\n",
-    "def t_test_paired(a, b, alpha, alternative='two-sided'):\n",
-    "    from scipy import stats\n",
-    "    import scipy.stats as ss\n",
-    "    import pandas as pd\n",
-    "    import statsmodels.stats.weightstats as ws\n",
-    "    \n",
-    "    diff = a.mean() - b.mean()\n",
+    "### Defining Functions to assist conducting the T-test and Plotting Results \n",
     "\n",
-    "    res = ss.ttest_rel(a, b)\n",
-    "      \n",
-    "    means = ws.CompareMeans(ws.DescrStatsW(a), ws.DescrStatsW(b))\n",
-    "    confint = means.tconfint_diff(alpha=alpha, alternative=alternative, usevar='unequal') \n",
-    "    degfree = means.dof_satt()\n",
-    "\n",
-    "    index = ['DegFreedom', 'Difference', 'Statistic', 'PValue', 'Low95CI', 'High95CI']\n",
-    "    return pd.Series([degfree, diff, res[0], res[1], confint[0], confint[1]], index = index)   \n",
-    "   \n",
+    "## Histogram Plot \n",
     "def hist_plot(vec, bins):\n",
     "    import matplotlib.pyplot as plt\n",
     "    from statistics import mean\n",
@@ -327,6 +313,7 @@
     "    plt.ylabel('Frequency')\n",
     "    plt.xlabel('Value')\n",
     "    \n",
+    "## Confidence Interval on Histogram \n",
     "def hist_mean_ci(vec, t_test, bins):\n",
     "    import matplotlib.pyplot as plt\n",
     "    from statistics import mean\n",
@@ -531,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analysis of the T-tests conducted above:\n",
+    "#### Analysis of the 3 T-tests conducted above:\n",
     "\n",
     "\n",
     "-- For Fuel Type, the t-test conducted on the gas and diesel groups showed a p-value of 0.055 which is larger than 0.05 cutoff, has a small t statistic, has a small difference in means, and the CI staddles 0. From this we cannot reject the null hypothesis. There is a good chance that the difference in price means between the groups is from random variation.\n",
@@ -553,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +549,7 @@
        "Text(0.5, 1.0, 'Box Plot of Different Body Style Prices')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -590,6 +577,7 @@
     "    # hardtop         8\n",
     "    # convertible     6\n",
     "    \n",
+    "## Separating out the Categories to their own dataset \n",
     "sedan = Auto.loc[Auto.loc[:, 'body-style'] == 'sedan', 'LogPrice']\n",
     "hatchback = Auto.loc[Auto.loc[:, 'body-style'] == 'hatchback', 'LogPrice']\n",
     "wagon = Auto.loc[Auto.loc[:, 'body-style'] == 'wagon', 'LogPrice']\n",
@@ -610,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +611,10 @@
     }
    ],
    "source": [
-    "f_statistic, p_value = ss.f_oneway(sedan, hatchback, wagon, hardtop, convertible)\n",
+    "## Calculating the F Statistic / ANOVA to determine if there is a statistically significant difference \n",
+    "\n",
+    "f_statistic, p_value = ss.f_oneway(sedan, hatchback, wagon, hardtop, convertible) \n",
+    "\n",
     "print('F statistic = ' + str(f_statistic))\n",
     "print('P-value = ' + str(p_value))"
    ]
@@ -637,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +701,7 @@
        "<Figure size 720x432 with 1 Axes>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -776,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +777,7 @@
        "<Figure size 720x432 with 1 Axes>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -912,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +913,7 @@
        "<Figure size 720x432 with 1 Axes>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -940,7 +931,7 @@
     }
    ],
    "source": [
-    "## Examining unique values in the column\n",
+    "## Examining unique values in the Number of Doors column\n",
     "# print(Auto.loc[:, \"num-of-doors\"].value_counts())\n",
     "    # four    114\n",
     "    # two      89\n",
@@ -967,8 +958,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -977,7 +970,7 @@
        "<Figure size 720x432 with 1 Axes>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -995,7 +988,7 @@
     }
    ],
    "source": [
-    "## Examining unique values in the column\n",
+    "## Examining unique values in Fuel System column\n",
     "# print(Auto.loc[:, \"fuel-system\"].value_counts())\n",
     "        # mpfi    94\n",
     "        # 2bbl    66\n",
