--- a/L06-03-ST-LinearRegressionWithBootstrapping.ipynb
+++ b/L06-03-ST-LinearRegressionWithBootstrapping.ipynb
@@ -43,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average of teacher age guesses: 37.6 years old.\n",
+      "St.Dev. of teacher age guesses: 16.29232948353304 years.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -74,9 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the top 3 samples generated:\n",
+      "[[35, 97, 39, 33, 29, 97, 29, 39, 33, 29, 36, 30, 29, 97, 97], [33, 29, 41, 97, 27, 33, 29, 30, 39, 35, 33, 30, 31, 30, 33], [41, 29, 35, 36, 29, 29, 36, 35, 33, 35, 41, 35, 27, 31, 33]], ...\n"
+     ]
+    }
+   ],
    "source": [
     "n_sets = 100\n",
     "n_samples = len(teacher_age)\n",
@@ -99,9 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average of the sample averages: 37.751333333333335\n",
+      "Average of the sample st. devs: 13.738551124830446\n"
+     ]
+    }
+   ],
    "source": [
     "sample_means = [np.mean(x) for x in boot_samples]\n",
     "sample_stdev = [np.std(x) for x in boot_samples]\n",
@@ -578,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
