--- a/AnaJaved-L06-AdRegression.ipynb
+++ b/AnaJaved-L06-AdRegression.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "max    296.400000   49.600000  114.000000   27.000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "## First Independent Feature: TV (Advertisting Dollars spent on TV)\n",
+    "## First Independent Feature: TV (Advertisting Dollars spent on TV ads) \n",
     "## Dependent Feature = Sales\n",
     "\n",
     "# First initialize the model.\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
     }
    ],
    "source": [
-    "## Second Independent Feature: Radio  (Advertisting Dollars spent on Radio)\n",
+    "## Second Independent Feature: Radio  (Advertisting Dollars spent on Radio Ads)\n",
     "## Dependent Feature = Sales\n",
     "\n",
     "# First initialize the model.\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
     }
    ],
    "source": [
-    "## Third Independent Feature: Newspaper (Advertisting Dollars spent on Newspaper)\n",
+    "## Third Independent Feature: Newspaper (Advertisting Dollars spent on Newspaper Ads)\n",
     "## Dependent Feature = Sales\n",
     "\n",
     "# First initialize the model.\n",
@@ -361,6 +361,109 @@
     "# Get slope (m) and y-intercept (b)\n",
     "print('Intercept: {0:.5f}'.format(linear_model.intercept_[0]))\n",
     "print('Slope : {0:.5f}'.format(linear_model.coef_[0][0]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interpretation of the Intercept & Slope for TV, Radio, and Newspaper Ads in relation to Sales \n",
+    "\n",
+    "For TV, the slope is small but positive, which means that as TV ad spending increased, the Sales increased at a rate of 0.047. The y-intercept is 7.03, which means that if TV ad spending was 0, then sales would be about 7.03. \n",
+    "\n",
+    "For Radio, the slope is slightly bigger than TV and positive. This means that as radio ad spending increased, sales increased at a rate of 0.20. The y-intercept is also higher than TV, and it is 9.31. This means that if Radio ad spending was 0, then sales would be at 9.311. \n",
+    "\n",
+    "For Newspaper, the slope is 0.055. This means that as newspaper ads spending increased, sales increased at this rate. The y-intercept is the highest out of all three, and sits at 12.35. This means that if newspaper spending was 0, then sales would be at 12.35. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Regression for All 3 Features: TV, Radio, and Newspaper\n",
+    "\n",
+    "## Separating the independent variables vs dependent variables \n",
+    "x = ad_data[['TV','radio', 'newspaper']]\n",
+    "y = ad_data['sales']\n",
+    "\n",
+    "# Scalining the data via sklearn \n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(x)\n",
+    "x = scaler.transform(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 40.250563089633964\n",
+      "SSR: 556.8252629021873\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  sales   R-squared:                       0.897\n",
+      "Model:                            OLS   Adj. R-squared:                  0.896\n",
+      "Method:                 Least Squares   F-statistic:                     570.3\n",
+      "Date:                Mon, 18 Jan 2021   Prob (F-statistic):           1.58e-96\n",
+      "Time:                        21:15:28   Log-Likelihood:                -386.18\n",
+      "No. Observations:                 200   AIC:                             780.4\n",
+      "Df Residuals:                     196   BIC:                             793.6\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         14.0225      0.119    117.655      0.000      13.787      14.258\n",
+      "x1             3.9193      0.119     32.809      0.000       3.684       4.155\n",
+      "x2             2.7921      0.128     21.893      0.000       2.541       3.044\n",
+      "x3            -0.0225      0.128     -0.177      0.860      -0.274       0.229\n",
+      "==============================================================================\n",
+      "Omnibus:                       60.414   Durbin-Watson:                   2.084\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              151.241\n",
+      "Skew:                          -1.327   Prob(JB):                     1.44e-33\n",
+      "Kurtosis:                       6.332   Cond. No.                         1.46\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conducting Multivariant Regression with statsmodels\n",
+    "import statsmodels.api as sm \n",
+    "X = sm.add_constant(x) # adding a constant variable \n",
+    "\n",
+    "# Fitting the model \n",
+    "model = sm.OLS(y, X).fit()  \n",
+    "print_model = model.summary()\n",
+    "\n",
+    "# Printing the Mean-Squared Error (RMSE)\n",
+    "print('RMSE: {}'.format(np.sqrt(model.mse_model)))\n",
+    "print('SSR: {}'.format(model.ssr))\n",
+    "\n",
+    "# Printing the model Summary \n",
+    "print(print_model)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interpretation of the Multivariant Linear Regression Model \n",
+    "\n",
+    "The partial slope for TV (or x1) is 3.92, which means if all other predictors are held constant, if the TV ads sales increased, average sales would increase by 3.92. The partial slope for radio (or x2) is 2.79, so if all predictors are held constant - if radio ads increased, average sales would increase by 2.79. This is smaller than TV. Finally, for newspaper (or x3) the partial slope is -0.022. This suggests that for each newspaper ad purchased, the sales would decrease by -0.022. The constant for the equation is 14.022. \n",
+    "\n",
+    "The adjusted r-squared is 0.896, which suggests the model can account for 89.6% of the variations seen in the sample data provided to the model. \n",
+    "\n",
+    "Lastly, the mean-squared error, or average measure of errors of the model, is 40.25. This is quite large and can suggest that our model has large errors.  "
    ]
   },
   {
