--- a/L02 Labs.ipynb
+++ b/L02 Labs.ipynb
@@ -39,8 +39,8 @@
    "metadata": {},
    "source": [
     "#### Alert:\n",
-    "1. Can be slow when data is large\n",
-    "2. Can work on binary or multiclass classification data "
+    "1. Can be slow when data is large \n",
+    "2. Can work on binary or multiclass classification data when done in Python :) "
    ]
   },
   {
@@ -53,12 +53,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting delayed\n",
+      "  Downloading delayed-0.11.0b1-py2.py3-none-any.whl (19 kB)\n",
+      "Collecting hiredis\n",
+      "  Downloading hiredis-1.1.0-cp38-cp38-macosx_10_9_x86_64.whl (19 kB)\n",
+      "Collecting redis\n",
+      "  Downloading redis-3.5.3-py2.py3-none-any.whl (72 kB)\n",
+      "\u001b[K     |████████████████████████████████| 72 kB 627 kB/s eta 0:00:011\n",
+      "\u001b[?25hInstalling collected packages: redis, hiredis, delayed\n",
+      "Successfully installed delayed-0.11.0b1 hiredis-1.1.0 redis-3.5.3\n"
+     ]
+    }
+   ],
    "source": [
     "# Uncomment the following line to install Imbalanced learn\n",
-    "#!pip install imblearn"
+    "# !pip install imblearn\n",
+    "# !pip install delayed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original dataset shape Counter({2: 850, 1: 100, 0: 50})\n",
+      "Resampled dataset shape Counter({2: 850, 1: 850, 0: 850})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "from sklearn.datasets import make_classification\n",
+    "from imblearn.over_sampling import SMOTE \n",
+    "\n",
+    "sample_size = 1000\n",
+    "X, y = make_classification(n_classes=3, class_sep=2, weights=[0.05, 0.1, 0.85], n_informative=3, \\\n",
+    "                           n_redundant=1, flip_y=0, n_features=20, n_clusters_per_class=1, n_samples=sample_size, random_state=10)\n",
+    "print('Original dataset shape {}'.format(Counter(y)))\n",
+    "\n",
+    "sm = SMOTE(random_state=42)\n",
+    "X_res, y_res = sm.fit_resample(X, y)\n",
+    "print('Resampled dataset shape {}'.format(Counter(y_res)))\n"
    ]
   },
   {
@@ -66,19 +112,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from collections import Counter\n",
-    "from sklearn.datasets import make_classification\n",
-    "from imblearn.over_sampling import SMOTE \n",
-    "sample_size = 1000\n",
-    "X, y = make_classification(n_classes=3, class_sep=2, weights=[0.05, 0.1, 0.85], n_informative=3, \\\n",
-    "                           n_redundant=1, flip_y=0, n_features=20, n_clusters_per_class=1, n_samples=sample_size, random_state=10)\n",
-    "print('Original dataset shape {}'.format(Counter(y)))\n",
-    "\n",
-    "sm = SMOTE(random_state=42)\n",
-    "X_res, y_res = sm.fit_sample(X, y)\n",
-    "print('Resampled dataset shape {}'.format(Counter(y_res)))\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -98,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
