--- a/L02-AnaJaved.ipynb
+++ b/L02-AnaJaved.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "casual-soccer",
+   "id": "instructional-turtle",
    "metadata": {},
    "source": [
     "## Bad vs Good Connections\n",
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
-   "id": "coupled-rachel",
+   "execution_count": 1,
+   "id": "flexible-romantic",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Importing Necessary Packages \n",
+    "## Importing Necessary Libraries & Packages \n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
-   "id": "lovely-soccer",
+   "execution_count": 2,
+   "id": "complicated-america",
    "metadata": {},
    "outputs": [
     {
@@ -260,13 +260,13 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Reading file into Dataframe \n",
+    "## Reading data file into Dataframe \n",
     "url = \"https://library.startlearninglabs.uw.edu/DATASCI420/2019/Datasets/Intrusion%20Detection.csv\"\n",
     "df = pd.read_csv(url, sep=\",\")\n",
     "\n",
@@ -276,8 +276,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
-   "id": "talented-orbit",
+   "execution_count": 3,
+   "id": "waiting-keeping",
    "metadata": {},
    "outputs": [
     {
@@ -404,15 +404,15 @@
    ],
    "source": [
     "## Conducting Exploratory Data Analysis: \n",
-    "print(df.shape)  # (97308, 42)\n",
+    "print(df.shape)  # (97308, 42) \n",
     "print(df.dtypes) # many int64, object, and float64 types \n",
     "print(df.describe()) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
-   "id": "radio-beaver",
+   "execution_count": 4,
+   "id": "divine-roots",
    "metadata": {},
    "outputs": [
     {
@@ -426,6 +426,7 @@
    "source": [
     "## Obtaining a list of Column Names that will be Used for Normalization & Dummy Variables \n",
     "other_columns = list(df.columns)\n",
+    "# Removing the Target Variable \n",
     "other_columns.remove('Class')\n",
     "print(other_columns)\n",
     "\n",
@@ -436,28 +437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
-   "id": "actual-seafood",
+   "execution_count": 5,
+   "id": "domestic-warren",
    "metadata": {},
    "outputs": [],
    "source": [
     "## Standardizing / Normalizing Values with StandardScaler \n",
     "standardization_scale = StandardScaler().fit(df_expanded)\n",
-    "normalized_df = pd.DataFrame(standardization_scale.transform(df_expanded), columns=df_expanded.columns)\n",
-    "\n",
-    "# # Using sklearn standardization_scale \n",
-    "# Y = df.loc[:, \"Class\"]\n",
-    "# Y = pd.DataFrame(Y) \n",
-    "# standardization_scale = StandardScaler().fit(Y)\n",
-    "# y = standardization_scale.transform(Y)\n",
-    "# df.loc[:, \"Class\"] = y\n",
-    "\n"
+    "normalized_df = pd.DataFrame(standardization_scale.transform(df_expanded), columns=df_expanded.columns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
-   "id": "exact-brick",
+   "execution_count": 6,
+   "id": "imperial-multimedia",
    "metadata": {},
    "outputs": [
     {
@@ -837,21 +830,22 @@
        "[97308 rows x 72 columns]"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(normalized_df.shape)\n",
+    "## Double Checking Output of Data, to ensure it appears correct\n",
     "\n",
+    "print(normalized_df.shape) #(97308, 72)\n",
     "normalized_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
-   "id": "smart-uncertainty",
+   "execution_count": 7,
+   "id": "centered-light",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,12 +858,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
-   "id": "chemical-bearing",
+   "execution_count": 8,
+   "id": "recreational-clinton",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create pipeline\n",
+    "## Creating pipeline to conducting Recursive Feature Elimination (RFE) first \n",
+    "## And then apply the Decision Tree Classifier\n",
     "rfe = RFE(estimator=DecisionTreeClassifier(), n_features_to_select= 5)\n",
     "model = DecisionTreeClassifier()\n",
     "pipeline = Pipeline(steps=[('s',rfe), ('m',model)])"
@@ -877,8 +872,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
-   "id": "fitted-character",
+   "execution_count": 9,
+   "id": "inside-venezuela",
    "metadata": {
     "scrolled": true
    },
@@ -892,48 +887,46 @@
        "                ('m', DecisionTreeClassifier())])"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# fit the model on all available data\n",
+    "# Fitting the model on all training data\n",
     "pipeline.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
-   "id": "polyphonic-matthew",
+   "execution_count": 10,
+   "id": "minor-playlist",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9998972335265343"
-      ]
-     },
-     "execution_count": 271,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Accuracy:  0.9997944670530686\n"
+     ]
     }
    ],
    "source": [
-    "## Separating Predicted vs Target Values \n",
+    "## Using the model to predict class with Test Data \n",
     "predictions = pipeline.predict(x_test)\n",
-    "target = y_test\n",
+    "target = y_test # Actual \n",
     "\n",
-    "pipeline.score(x_test, y_test)\n",
+    "# Mean Accuracy of Predictions \n",
+    "print(\"Mean Accuracy: \", pipeline.score(x_test, y_test)) \n",
     "\n",
     "# print(predictions, target)\n",
-    "# print(sum(predictions), sum(target)) #14, 19\n"
+    "# print(sum(predictions), sum(target)) #13, 19\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
-   "id": "controlled-valley",
+   "execution_count": 11,
+   "id": "rolled-armstrong",
    "metadata": {},
    "outputs": [
     {
@@ -943,21 +936,21 @@
       "\n",
       "\n",
       "Confusion matrix:\n",
-      " [[48635     0]\n",
-      " [    5    14]]\n",
+      " [[48629     6]\n",
+      " [    4    15]]\n",
       "\n",
-      "TP, TN, FP, FN: 14 , 48635 , 0 , 5\n",
+      "TP, TN, FP, FN: 15 , 48629 , 6 , 4\n",
       "\n",
-      "Precision Score: 1.0\n",
+      "Precision Score: 0.71\n",
       " \n",
       "\n",
-      "Recall Score: 0.74\n",
+      "Recall Score: 0.79\n",
       " \n",
       "\n",
-      "F1 Score: 0.85\n",
+      "F1 Score: 0.75\n",
       " \n",
       "\n",
-      " Accuracy Score: 1.0\n",
+      "Accuracy Score: 1.0\n",
       " \n"
      ]
     }
@@ -991,7 +984,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "approximate-generic",
+   "id": "certified-worship",
+   "metadata": {},
+   "source": [
+    "#### Summary for Part 1 \n",
+    "The confusion matrix metrics before resampling data shows okay results. Precision score - which is a good measure of reliability of the classifiers predictions - is at 71%. The Recall score - which estiamtes how well a classifier predicted a specific class - is slightly higher at 79%. These are good amounts but they can certainly be higher. In addition, the accuracy score is not necessarily reliable since there is a class imbalance in the dataset (only 19 total negative values compared to the total 97308 data points). We will revisit the accuracy score and see if it changes after handling the class imbalance below. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faced-pursuit",
    "metadata": {},
    "source": [
     "### Part 2: Modifying data by handling class imbalance"
@@ -999,57 +1001,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
-   "id": "opened-blogger",
+   "execution_count": 12,
+   "id": "nutritional-timber",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Loading SMOTE Package \n",
     "from imblearn.over_sampling import SMOTE \n",
     "\n",
     "sm = SMOTE(random_state= 123)\n",
-    "X_res, y_res = sm.fit_resample(normalized_df, df.loc[:,\"Class\"])"
+    "X_res, y_res = sm.fit_resample(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
-   "id": "varied-technician",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    97278\n",
-      "1    97278\n",
-      "Name: Class, dtype: int64\n",
-      "194556\n",
-      "(194556, 72)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(y_res.value_counts()) \n",
-    "\n",
-    "print(len(y_res))\n",
-    "\n",
-    "print(X_res.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 289,
-   "id": "fancy-rainbow",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(x_train, x_test, sum(y_train), sum(y_test))  #48738, 48540"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 290,
-   "id": "level-buddy",
+   "execution_count": 13,
+   "id": "premier-stomach",
    "metadata": {},
    "outputs": [
     {
@@ -1061,40 +1028,65 @@
        "                ('m', DecisionTreeClassifier())])"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Splitting Training and Testing Data\n",
+    "## Splitting Training and Testing Data with Resampled Datasets \n",
     "x_train, x_test, y_train, y_test = train_test_split (X_res,\n",
     "                                                     y_res,\n",
     "                                                     test_size = 0.5,\n",
     "                                                     random_state = 123)\n",
-    "# create pipeline\n",
+    "\n",
+    "# Creating the pipeline with the Resampled Datasets \n",
     "rfe = RFE(estimator=DecisionTreeClassifier(), n_features_to_select= 5)\n",
     "model = DecisionTreeClassifier()\n",
     "pipeline = Pipeline(steps=[('s',rfe), ('m',model)])\n",
     "\n",
-    "# fit the model on all available data\n",
+    "# Fitting the model on training data\n",
     "pipeline.fit(x_train, y_train)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "id": "efficient-advantage",
+   "execution_count": 25,
+   "id": "australian-sympathy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97286 [0 1] [48643 48643]\n",
+      "(97286, 72)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Checking the Total Values\n",
+    "uni, freq = np.unique(y_res, return_counts = True)  # 50% Class 0, #50% Class 1\n",
+    "print(len(y_res), uni, freq )\n",
+    "\n",
+    "print(X_res.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "killing-ladder",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999280412837435"
+       "0.9999383261723167"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,26 +1101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
-   "id": "middle-surname",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "48543 48540\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sum(predictions), sum(target))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 295,
-   "id": "identified-niger",
+   "execution_count": 27,
+   "id": "double-western",
    "metadata": {},
    "outputs": [
     {
@@ -1138,10 +1112,10 @@
       "\n",
       "\n",
       "Confusion matrix:\n",
-      " [[48733     5]\n",
-      " [    2 48538]]\n",
+      " [[24387     3]\n",
+      " [    0 24253]]\n",
       "\n",
-      "TP, TN, FP, FN: 48538 , 48733 , 5 , 2\n",
+      "TP, TN, FP, FN: 24253 , 24387 , 3 , 0\n",
       "\n",
       "Precision Score: 1.0\n",
       " \n",
@@ -1185,9 +1159,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "matched-stand",
+   "metadata": {},
+   "source": [
+    "#### Summary for Part 2\n",
+    "The confusion matrix metrics after resampling data shows improved results. Precision score is at now at 100%. The Recall score has increased to 100%. Both scores shows a large increase. Previously the accuracy score could not be used since it was not as reliable with class imbalanced - however now we see that there were 24390 negative Class values and 24387 positive Class values which is much more closer to each other than when there was an imbalance. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "incoming-liberia",
+   "metadata": {},
+   "source": [
+    "## Conclusion:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "declared-sacramento",
+   "metadata": {},
+   "source": [
+    "The purpose of this assignment was to build a machine learning algorithm that can accurately identify \"bad\" and \"good\" or normal connections on a network. One of the challenging aspects of this dataset was the class imbalance, regarding how many available values were \"good\" connections vs how many available values were \"bad\". There was a disproportionate amount of \"good\" values in the data, which makes the model very good at only detecting \"good\" connections. One way to combat this issue is by resampling the data so that there are even amounts of \"good\" and \"bad\" connections - and the model can become more accurate detecting both classes. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "computational-wells",
+   "id": "ordinary-sister",
    "metadata": {},
    "outputs": [],
    "source": []
